Change upcoming panel.

--- a/style.css
+++ b/style.css
@@ -118,19 +118,19 @@ body{
     /* left:5%; */
     left: 50%;
     transform: translate(-50%,0);
-    border-width: 10px;
-    border-color: black;
+    border: solid rgb(206, 206, 206);
+    border-width: 1px 1px;
 }
 
 .upcoming-title{
     text-align: center;
-    text-transform: uppercase;
-    font-family: "Quicksand";
+    text-transform: lowercase;
+    font-family: "Special Elite";
     font-size: 30px;
     font-weight:500;
-    color: white;
+    color: black;
     border-radius: 10px 10px 0px 0px;
-    background-color: rgb(207, 191, 252);
+    /* background-color: rgb(207, 191, 252); */
 }
 
 .update{
@@ -141,16 +141,18 @@ body{
 }
 
 .update-image{
+    margin-top: 30px;
     width: 85%;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0%);
+    border-radius: 10px;
 }
 
 .update-title{
     text-align: center;
-    text-transform: uppercase;
-    font-family: "Quicksand";
+    text-transform: none;
+    font-family: "Special Elite";
     font-size: 20px;
     font-weight: 600;
     margin: 5px;
@@ -159,7 +161,8 @@ body{
 
 .update-details{
     text-align: center;
-    font-family: "Quicksand";
+    text-transform: lowercase;
+    font-family: "Special Elite";
     font-size: 40;
     font-weight: 400;
 }
