--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body{
     border-radius: 10px;
     /* margin-left: 15px; */
     /* width: 40%; */
-    width: 50%;
+    width: 95%;
     position: relative;
     /* position: absolute */
     /* box-shadow: 0px 5px 5px rgba(0,0,0,.6); */
@@ -121,6 +121,19 @@ body{
     border: solid rgb(206, 206, 206);
     border-width: 1px 1px;
 }
+
+@media (min-width:400px) {
+    .upcoming{
+        width: 90%;
+    }
+  }
+
+@media (min-width:950px) {
+    .upcoming{
+        width: 50%;
+    }
+  }
+
 
 .upcoming-title{
     text-align: center;
