--- a/style.css
+++ b/style.css
@@ -59,8 +59,10 @@ body{
 }
 
 .page-content{
-    margin-top: 65%;
+    position: absolute;
+    top: 100%;
     padding: 0px;
+    width: 100%;
 }
 
 .page-footer{
