--- a/style.css
+++ b/style.css
@@ -30,9 +30,12 @@ body{
     left: 50%;
     transform: translate(-50%,0);
     z-index: 999;
+    background-color: rgba(255, 255, 255, 0.301);
     background-image: linear-gradient(to bottom, white, white, rgba(255, 255, 255, 0));
     width: 100%;
     text-align: center;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 #header-title{
